# wraith

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  integration_test.sh  spec.md
.claude/: settings.json
PyWraith/: README.md  pyproject.toml  setup.sh
PyWraith/src/pywraith/: __init__.py  cli.py  client.py  direct.py  nexus_integration.py  protocol.py  server.py  session.py  stamper.py  tun.py
PyWraith/src/pywraith/proto_gen/: tunnel_pb2.py  wraith_pb2.py
PyWraith/src/pywraith/proto_gen/proto/: tunnel_pb2.py
PyWraith/tests/: __init__.py  test_protocol.py
docs/superpowers/plans/: 2026-04-25-agent-routing-plan.md  2026-04-25-wraith-agent-network-implementation-plan.md
docs/superpowers/specs/: 2026-04-17-wraith-naming-simplification-design.md  2026-04-24-protocol-relay-design.md  2026-04-24-wraith-agent-network-design.md  2026-04-25-agent-routing-design.md  2026-05-01-peer-session-unified-loop-design.md
home/: README.md  pyproject.toml  setup.sh
home/PyWraith/: cli.py  client.py  protocol.py  server.py
home/PyWraith/proto_gen/: __init__.py  wraith_pb2.py
home/scripts/: gen_protobuf_python.sh
home/tests/: test_client.py  test_protocol.py
proto/: tunnel.proto  wraith.proto
src/: lib.rs  main.rs
src/agent/: client.rs  commands.rs  mod.rs  userspace_tun.rs
src/commands/: agent.rs  command.rs  mod.rs  relay.rs
src/connection/: connection.rs  framing.rs  mod.rs  tcp.rs  yamux.rs
src/direct/: mod.rs
src/message/: codec.rs  mod.rs
src/peer/: handshake.rs  mod.rs
src/platform/: linux.rs  mod.rs
src/proto/: mod.rs  wraith.rs  wraith.tunnel.rs
src/relay/: chain.rs  mod.rs  relay.rs  relay_handler.rs  server.rs  tcp.rs  tun.rs  udp.rs
src/socat/: mod.rs  relay.rs
src/transport/: tcp.rs
src/tserver/: mod.rs  server.rs  tun.rs  tunnel_handler.rs
src/tunnel/: chacha20.rs  channel.rs  framing.rs  mod.rs  multiplex.rs  protocol.rs
src/wraith/: config.rs  dispatcher.rs  embedded_config.rs  mod.rs  state.rs  wraith.rs
src/wraith/tunnel/: mod.rs  session.rs
tests/: commands.rs  tunnel.rs  wraith_state.rs
