[package]
name = "wraith"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.12"
clap = { version = "4", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
yamux = "0.13.10"  # Stage 2
tokio-util = { version = "0.7", features = ["compat"] }  # For yamux compatibility
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
hostname = "0.4"
dashmap = "5"

[build-dependencies]
prost-build = "0.12"

[[bin]]
name = "wraith"
path = "src/main.rs"