[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywraith"
version = "1.0.0"
description = "Python commanding package for Wraith reverse tunnel and relay tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Wraith Team" }
]
keywords = ["wraith", "tunnel", "pentesting", "reverse-tunnel", "relay", "socat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "protobuf>=4.21.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
wraith = "pywraith.cli:main"

[project.urls]
Homepage = "https://github.com/wraith/wraith"

[tool.hatch.build.targets.wheel]
packages = ["src/pywraith"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B028"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
